--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
   <meta charset="utf-8" />
   
   <!-- Includes -->
-  <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css"> -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  
-  <!-- ACE and its JavaScript mode and theme files -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.8/ace.js"></script>
-	
-  <!-- Firepad -->
-  <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.1.0/firepad.css" />
-  <script src="https://cdn.firebase.com/libs/firepad/1.1.0/firepad.min.js"></script>
+	<script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css"> -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-  <!-- Esprima -->
+	<!-- ACE and its JavaScript mode and theme files -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
+
+	<!-- Firepad -->
+	<link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.2.0/firepad.css" />
+	<script src="https://cdn.firebase.com/libs/firepad/1.2.0/firepad.min.js"></script>
+
+	<!-- Esprima -->
 	<script src="include/esprima.js"></script>
-	<script src="include/escodegen.js"></script>
+	<!-- <script src="include/escodegen.js"></script> -->
 
-  <!-- Stylesheet -->
-  <link rel="stylesheet" href="styles.css" />
+	<!-- Stylesheet -->
+	<link rel="stylesheet" href="styles.css" />
 
 </head>
 
@@ -51,7 +51,7 @@
 		</div>
 		
 
-	    <button onClick="updateIframe();" id="runCode" class="btn btn-default btn-primary" >Run</button>	
+	    <!-- <button onClick="updateIframe();" id="runCode" class="btn btn-default btn-primary" >Run</button> -->
 	  </div>
 	  <div class="col-md-7" style="padding-left: 2px; padding-right: 2px">
 	  		<div id="html-output"><iframe id="preview" style="height: 650px; width: 100%"></iframe></div>
@@ -63,6 +63,8 @@
 
 
 <script>
+	"use strict";
+
 	// Helper to get hash from end of URL or generate a random one.
 	function getUniqueCodeURL(baseURL) {
 	  var ref = new Firebase(baseURL);
@@ -83,8 +85,6 @@
 		// Reset the timeout to update the iframe.	
 		clearTimeout(editorChangedTimeout);
 		editorChangedTimeout = setTimeout(function() {
-			console.log("Editor changed timeout fired");
-			console.log("HasjsErrors: " + hasjsErrors);
 			if (!(hasjsErrors || hashtmlErrors || hascssErrors))
 				updateIframe();
 		}, 2500);
@@ -101,7 +101,7 @@
 		// Populate the iframe with the current html, css, and js.
 		$("#preview").contents().find("body").html(htmlEditor.getValue());
 		$("#preview").contents().find("head").append('<style>' + cssEditor.getValue() + '</style>'
-				+ '<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"><\/script>'
+				+ '<script src="https://code.jquery.com/jquery-2.1.4.min.js"><\/script>'
 				+ '<script>' + jsEditor.getValue() + '<\/script>');
 	}
 	
@@ -109,7 +109,7 @@
 	var editorChangedTimeout = null;
 
 	// Initialize Firebase Refs for js, html, and css
-	var baseURL = 'https://coode.firebaseio.com';
+	var baseURL = 'https://seecoderun.firebaseio.com';
 	var uniqueCodeURL = getUniqueCodeURL(baseURL);
 	var jsFirebaseRef = new Firebase(baseURL + '/' + uniqueCodeURL + '/content/js');
 	var htmlFirebaseRef = new Firebase(baseURL + '/' + uniqueCodeURL + '/content/html');
@@ -146,8 +146,6 @@
 	
 	// Subscribe to annotation changes
 	jsEditor.getSession().on("changeAnnotation", function(){
-		console.log("annotation changed");
-		
 		// Look through the JSON structure of annotations. If there is any annotation that is an error,
 		// set the error flag and halt.
     	var annot = jsEditor.getSession().getAnnotations();
