--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   
+  <!-- Comment by Dana -->
   <!-- Includes -->
 	<script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
