--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <template>
-  <require from="nav-bar.html"></require>
+  <require from="layout/nav-bar.html"></require>
   <require from="bootstrap/css/bootstrap.css"></require>
 
   <nav-bar router.bind="router"></nav-bar>
