--- a/src/consoleWindow/console-window.html
+++ b/src/consoleWindow/console-window.html
@@ -1,11 +1,11 @@
-<template bindable="consoleWindow">
+<template bindable="console">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">${title}</h3>
+            <h3 class="panel-title">${console.title}</h3>
         </div>
         <div class="panel-body">
-            <div repeat.for="output of log">
-                {output}
+            <div repeat.for="output of console.log">
+                ${output}
             </div>
         </div>
         <div class="panel-footer">
