--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<di<!doctype html>
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -32,6 +32,8 @@
 	<script src="include/gutter.js"></script>
 	<!-- stub -->
 	<script src="include/stub.js"></script>
+	<!-- visualization -->
+	<script src="include/visualization.js"></script>
 	<!-- Stylesheet -->
 	<link rel="stylesheet" href="styles.css" />
 
@@ -90,8 +92,8 @@
 			   </div>
 			 </div>
 			 <div role="tabpanel" class="tab-pane" id="visualization-container">
-		       <div class="checkbox">
-	             <label><input type="checkbox" >Activate Visualization Mode</label>
+		       <div class="checkbox" id="visual">
+	             <label><input type="checkbox" >Activate Visualization Mode</label></br><span id="note">You have activated Visualization Mode, Select any expression or variable to view visualization.</span>
 	           </div>
 			 </div>
 			</div>
@@ -102,80 +104,15 @@
    </div>
   
   
-  <!--
-  <div class="container-fluid">
-	  	<div class="row">
-	  	 <div id ="mainSplitter">
-		  <div class="col-md-5" style="padding-left: 0px; padding-right: 0px">	  
-		  	<div role="tabpanel" >
-			  	<ul class="nav nav-tabs">
-		  			<li role="presentation" class="active">
-		  				<a href="#js-container" aria-controls="js-container" role="tab" data-toggle="tab">js</a></li>
-		  			<li role="presentation">
-		  				<a href="#html-container" aria-controls="html-container" role="tab" data-toggle="tab">html</a></li>
-		  			<li role="presentation">
-		  				<a href="#css-container" aria-controls="css-container" role="tab" data-toggle="tab">css</a></li>
-				</ul>
-			</div>
-		    <div class="tab-content">	  
-			  <div role="tabpanel" class="tab-pane active" id="js-container" >
-	            <div class ="row">
-	              <div class="col-md-9" style="padding-left: 0px; padding-right: 0px; padding-top: 5px">
-				  	<div id="aceJSEditorDiv" style="height: 700px;">
-				    </div>
-		          </div>
-		          <div class="col-md-3" style="padding-left: 0px; padding-right: 13px; padding-top:3px">
-	                <div id="gutter_space" class="line_height" >
-	                  <iframe  class= "iframeCss" id="gutter" >
-	                  </iframe>
-	                </div>
-	               </div>
-	              </div>
-			  	</div>
-				<div role="tabpanel" class="tab-pane" id="html-container">
-				  <div id="aceHTMLEditorDiv" style="height: 700px">
-				  </div>
-				</div>
-				<div role="tabpanel" class="tab-pane" id="css-container">
-				 <div id="aceCSSEditorDiv" style="height: 700px">
-				 </div>
-				</div>
-		    </div>
-		</div>
-	    <div>
-	      <div role="tabpanel" >
-			<ul class="nav nav-tabs">
-			  <li role="presentation" class="active">
-			  	<a href="#output-container" aria-controls="output-container" role="tab" data-toggle="tab">output</a></li>
-		  	  <li role="presentation">
-		  		<a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">visualization</a></li>
-		  	</ul>
-		  </div>
-		  <div class="col-md-7" style="padding-left: 2px; padding-right: 2px" id="rightSplitter">
-		    <div class="tab-content">
-		  	 <div role="tabpanel" class="tab-pane" id="output-container">
-			   <div id="html-output">
-				<iframe id="preview" class= "iframeCss" style = "height: 700px">
-				</iframe>
-			   </div>
-			 </div>
-			 <div role="tabpanel" class="tab-pane" id="visualization-container">
-		       <div class="checkbox">
-	             <label><input type="checkbox" >Activate Visualization Mode</label>
-	           </div>
-			 </div>
-			</div>
-		  <div id="console-output"></div>
-		 </div>
-	 </div>
-    </div>
-   </div>
-  
-  -->
-  
-
+ 
 
 <script>
+$('#visual').on('change', 'input[type="checkbox"]', function(){
+    
+     toggle();
+});
+
+
 	"use strict";
 
 	// Helper to get hash from end of URL or generate a random one.
