--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
 			<div class="tab-content">	  
 		  	 <div role="tabpanel" class="tab-pane active" id="js-container" >
                   <div class ="row">
-                  <div class="col-md-9" style="padding-left: 0px; padding-right: 0px; padding-top: 5px">
+                  <div class="col-md-9" style="padding-right: 0px;padding-top: 5px">
 		  			<div id="aceJSEditorDiv" style="height: 700px;"></div>
                   </div>
-                  <div class="col-md-3" style="padding-left: 0px; padding-right: 13px; padding-top:3px">
-                    <!-- <label> <input type="checkbox" value="">Show Gutter</label> <!-->
+                  <div class="col-md-3" style="padding-left: 0px; padding-right: 15px; padding-top:3px">
                     <div id="gutter_space" class="line_height" ><div  class= "iframeCss" id="gutter" ></div></div>
                   
                   </div>
