Fixed a small bug

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
        <div>
        <div role="tabpanel" >
 			<ul class="nav nav-tabs">
-			  <li role="presentation" class="active">
+			  <li role="presentation" class="active" >
 			  	<a href="#output-container" aria-controls="output-container" role="tab" data-toggle="tab">output</a></li>
-		  	  <li role="presentation">
+		  	  <li role="presentation" >
 		  		<a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">visualization</a></li>
 		  	</ul>
 		  </div>
 		  <div class="col-md-7" style="padding-left: 2px; padding-right: 2px" id="rightSplitter">
 		    <div class="tab-content">
-		  	 <div role="tabpanel" class="tab-pane" id="output-container">
+		  	 <div role="tabpanel" class="tab-pane active" id="output-container">
 			   <div id="html-output">
 				<iframe id="preview" class="iframeCssPreview">
 				</iframe>
