--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		  			<div id="aceJSEditorDiv" style="height: 700px;"></div>
                   </div>
                   <div class="col-md-3" style="padding-left: 0px; padding-right: 15px; padding-top:3px">
-                    <div id="gutter_space"  ><div  class= "iframeCss" id="gutter" ></div></div>
+                    <div id="gutter_space"  ><div  class= "iframeCss" id="gutter" onscroll="scrolled()" ></div></div>
                   
                   </div>
                 </div>
