--- a/src/traceService/traceServiceInterfaceAndTests/AceRangeTest.html
+++ b/src/traceService/traceServiceInterfaceAndTests/AceRangeTest.html
@@ -100,6 +100,10 @@ var g = {"a":"1","b":"2"}; // {"Others":["\1"\""]} and {"Others":["\2"\""]}
 for(var gee in g){ // not yet implemented (not working correctly)
     console.log(gee);
 }
+function x(){ // function declaration
+    return 5; // {"ReturnStatement":"5"}
+}
+x(); //{"FunctionInvocation":"5"}
 </div>
     	<script>
     	    // label to display the current result
