--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			 
 			 <div role="tabpanel" class="tab-pane" id="visualization-container">
 		       <div class="checkbox" id="visual">
-	             <label><input type="checkbox" id="mycheck">Activate Visualization Mode</label></br><span id="note">You have activated Visualization Mode, Select any expression or variable to view visualization.</span>
+	             <label><input type="checkbox" id="mycheck">Activate Selection for Visualization</label></br><span id="note">You have activated Visualization Mode, Select any expression or variable to view visualization.</span>
 	           </div>
 			 </div>
 			</div>
