Brandon - table demo

--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -1,3 +1,4 @@
-<template bindable="viewer">
-  <iframe id="visView"></iframe>
+<template bindable="visualizations">
+    <div class="visualization table" repeat.for="vis of visualizations"></div>
+    </div>
 </template>
