Chat integration to Aurelia work

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -2,6 +2,7 @@
   <require from="jsEditor/js-editor.html"></require>
   <require from="consoleWindow/console-window.html"></require>
   <require from="jsGutter/js-gutter.html"></require>
+  <require from="chat/chat.html"></require>
 
   <section class="au-animate">
     <h2>${heading} ${pastebinId}</h2>
