--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>SeeCode.Run</title>
 	<link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" href="jquery-ui.css" />
+	<link rel="stylesheet" href="chat.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -20,6 +22,8 @@
 		System.import('aurelia-bootstrapper');
 	</script>
 
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="jquery-ui.js"></script>
 
 	<!-- Firebase -->
 	<script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
@@ -29,6 +33,8 @@
 
 	<!-- Firepad -->
 	<script src="https://cdn.firebase.com/libs/firepad/1.2.0/firepad.js"></script>
+	
+	
 
 </body>
 
