Added data table visualization and visualization factory

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -58,7 +58,7 @@
             </div>
             <div id="visualization" class="tab-pane fade">
               <div>
-                <vis-viewer visualizations.bind="visualizations"></vis-viewer>
+                <vis-viewer viewer.bind="visViewer"></vis-viewer>
               </div>
             </div>
           </div>
