Added list of remaining taks

--- a/src/traceService/js-sandbox.html
+++ b/src/traceService/js-sandbox.html
@@ -1,4 +1,13 @@
-
+ <!-- 
+ Order of Operation (March 26, 2016)
+1) [ ] Generate Execution Trace from example code (Han)
+2) [ ] Searchbox will be used to match user input in executiontrace (Dana)
+3) [ ] Collect search resuts in an array. (Dana)
+4) [ ] Present the results in a static table (actual UI) for the user. (Dana)
+5) [ ] Make the table dynamic with the Combo box different number of columns (jQuery) (Han)
+6) [ ] Integrate with Ace Editor (Dana and Han)
+7) [ ] Integrate with Aurelia (Working with David)
+-->
 <template bindable="sandbox">
     <div id="sandBoxDiv" style="height: 1000px"></div>
 </template>
