--- a/src/jsEditor/js-editor.html
+++ b/src/jsEditor/js-editor.html
@@ -1,3 +1,3 @@
 <template bindable="editor">
-    <div id="jsEditorDiv" style="height: 500px"></div>
+    <div id="editorDiv" style="height: 500px"></div>
 </template>
