revert the master

--- a/src/cssEditor/css-editor.html
+++ b/src/cssEditor/css-editor.html
@@ -1,4 +1,3 @@
-<template bindable="cssEditor">
-	<div id="cssEditorDiv" style="height: 700px"></div>
-	 
+<template bindable="editor">
+    <div id="cssEditorDiv" style="height: 500px"></div>
 </template>
