--- a/src/jsGutter/js-gutter.html
+++ b/src/jsGutter/js-gutter.html
@@ -1,5 +1,3 @@
 <template bindable="gutter">
-
-	 <div  class= "iframeCss" id="gutter" scroll.trigger="gutter.publish($event)" style="height: 700px"></div>
-  
+    <div id="gutterDiv" style="height: 500px"></div>
 </template>
