--- a/src/htmlEditor/html-editor.html
+++ b/src/htmlEditor/html-editor.html
@@ -1,4 +1,3 @@
-<template bindable="htmlEditor">
-	<div id="aceHtmlEditorDiv" style="height: 700px"></div>
-	 
+<template bindable="editor">
+    <div id="htmlEditorDiv" style="height: 500px"></div>
 </template>
