--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>SeeCode.Run</title>
 	<link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" href="styles/jqx.base.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body aurelia-app="main">
@@ -16,10 +18,13 @@
 
 	<script src="jspm_packages/system.js"></script>
 	<script src="config.js"></script>
+    
 	<script>
 		System.import('aurelia-bootstrapper');
 	</script>
 
+      <!-- JQuery -->
+ 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 	<!-- Firebase -->
 	<script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
@@ -30,6 +35,13 @@
 	<!-- Firepad -->
 	<script src="https://cdn.firebase.com/libs/firepad/1.2.0/firepad.js"></script>
 
+    	
+
+ 
+
+		
 </body>
+
+   
 
 </html>
