Revert " revert the master"
This reverts commit 5fbf6c784f3db056e4864fbb36ffd21817417f53.

--- a/src/cssEditor/css-editor.html
+++ b/src/cssEditor/css-editor.html
@@ -1,3 +1,4 @@
-<template bindable="editor">
-    <div id="cssEditorDiv" style="height: 500px"></div>
+<template bindable="cssEditor">
+	<div id="cssEditorDiv" style="height: 700px"></div>
+	 
 </template>
