--- a/src/htmlEditor/html-editor.html
+++ b/src/htmlEditor/html-editor.html
@@ -1,3 +1,4 @@
-<template bindable="editor">
-    <div id="htmlEditorDiv" style="height: 500px"></div>
+<template bindable="htmlEditor">
+	<div id="aceHtmlEditorDiv" style="height: 700px"></div>
+	 
 </template>
