--- a/src/htmlViewer/html-viewer.html
+++ b/src/htmlViewer/html-viewer.html
@@ -1,3 +1,3 @@
 <template bindable="viewer">
-  <iframe id="htmlView"></iframe>
+  <iframe id="htmlView" class="iframeCssPreview"></iframe>
 </template>
