Revert "Merge pull request #69 from tlatoza/Abdulaziz"
This reverts commit 82bf960d1ea0c28d55e2147758b0798588fd384e, reversing
changes made to 8e0a935dd045f5c1e8822676b23e5fad603ed783.

--- a/src/jsEditor/js-editor.html
+++ b/src/jsEditor/js-editor.html
@@ -1,4 +1,3 @@
-<template bindable="jsEditor">
-	<div id="aceJsEditorDiv" style="height: 700px"></div>
-	 
+<template bindable="editor">
+    <div id="jsEditorDiv" style="height: 500px"></div>
 </template>
