jbhilton11 + sblake20: worked on getting master merged back into pastebin with chat and navbar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>SeeCode.Run</title>
 	<link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="styles/styles.css">
 	<link rel="stylesheet" href="styles/chat.css">
 
@@ -29,6 +30,9 @@
 
       <!-- JQuery -->
  	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+ 	
+ 	  <!-- JQuery-UI -->
+ 	<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 
 	<!-- Firebase -->
 	<script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
