--- a/src/chat/chat.html
+++ b/src/chat/chat.html
@@ -1,18 +1,22 @@
 <template bindable="chat">
-    
+
   <div id="chatDiv" class="seecoderun-chat l-demo-container">
-  <div class="seecoderun-chatHeader" <header>SeeCode.Run Chat</header></div> <!-- added div and class--> 
+    <div class="seecoderun-chatHeader">
+      <header>SeeCode.Run Chat</header>
+    </div>
+    <!-- added div and class-->
 
-  <div class='seecoderun-chat-toolbar'>
-    <label for="nameInput">Username:</label>
-    <input type='text' id='nameInput' placeholder='Enter Your Username...'>
-  </div>
+    <div class='seecoderun-chat-toolbar'>
+      <label for="nameInput">Username:</label>
+      <input type='text' id='nameInput' placeholder='Enter Your Username...'>
+    </div>
 
-  <ul id='seecoderun-messages' class="seecoderun-chat-messages"></ul>
+    <ul id='seecoderun-messages' class="seecoderun-chat-messages"></ul>
 
-  <footer>
-    <input type='text' id='messageInput'  placeholder='Type Message Here...'>
-  </footer>
-</div>
+    <div class="seecoderun-chat-footer">
+      <footer>
+        <input type='text' id='messageInput' placeholder='Type Message Here...'>
+      </footer>
+    </div>
   </div>
 </template>
