Alex Steph Initial Share Work

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -48,6 +48,7 @@
       </div>
       <div id="main-splitter-right">
         <div id="rightSplitter" class="col-md-5" style="padding-left: 2px; padding-right: 2px">
+          <share share.bind="share"></share>
           <div id="right-splitter-top">
             <div role="tabpanel">
               <ul class="nav nav-tabs">
