Alex Steph Share Work

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -7,6 +7,7 @@
   <require from="htmlViewer/html-viewer.html"></require>
   <require from="consoleWindow/console-window.html"></require>
   <require from="chat/chat.html"></require>
+  <require from="share/share.html"></require>
 
   <div class="container-fluid" style="padding-left: 0px; padding-right: 0px; padding-left: 7px;">
 
