--- a/src/share/share.html
+++ b/src/share/share.html
@@ -1,8 +1,7 @@
 <template bindable="share">
     
         <div>
-            <input type="text" id="copyTarget" value=""> <button id="copyButton">Copy</button>
-            <button id="close">Collapse</button>
+            <input type="text" class="form-control" id="copyTarget" value=""><button type="button" class="btn btn-primary" id="copyButton">Copy</button><br><br>
         </div>
    
 </template>
