--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -7,7 +7,7 @@
   <require from="htmlViewer/html-viewer.html"></require>
   <require from="consoleWindow/console-window.html"></require>
   <require from="chat/chat.html"></require>
-  <require from="searchBox/trace-search.html"></require>
+  <require from="searchTab/trace-search.html"></require>
 
   <div class="container-fluid" style="padding-left: 0px; padding-right: 0px; padding-left: 7px;">
 
@@ -56,25 +56,30 @@
                   <a href="#preview" aria-controls="preview" role="tab" data-toggle="tab">output</a></li>
                 <li role="presentation">
                   <a href="#visualization-container" aria-controls="visualization-container" role="tab" data-toggle="tab">visualization</a></li>
-              </ul>
+                <li role="presentation">
+                    <a href="#search-tab" aria-controls="search-tab" role="tab" data-toggle="tab">trace search</a></li>
+                </ul>
             </div>
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane active" id="preview">
-                <html-viewer></html-viwer>
+                <html-viewer></html-viewer>
               </div>
               <div role="tabpanel" class="tab-pane iframeCssPreview" id="visualization-container">
                 <vis-viewer vis.bind="visViewer"></vis-viewer>
+              </div>
+              <div role="tabpanel" class="tab-pane" id="search-tab">
+                 <trace-search traceSearch.bind="traceSearch"></trace-search>
               </div>
             </div>
           </div>
           <div id="right-splitter-bottom">
             <console-window console.bind='consoleWindow'></console-window>
             <chat chat.bind="chat"></chat>
-            <trace-search traceSearch.bind="traceSearch"></trace-search>
           </div>
         </div>
       </div>
     </div>
 
   </div>
+
 </template>
