--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -1,7 +1,22 @@
 <template bindable="traceSearch">
-  <input type="textfield" id="searchTerm" placeholder="ex. expression"> 
-  <select name="searchFilter" id="searchFilter" ui-checkbox>
-    <option value="none">None</option>
-  </select>
-  <div id='searchResultDisplayArea'></div>
+	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+	
+  <div class="w3-row-padding">
+    <div class="w3-col" style="width:90px;" >
+    	<div class="w3-group" >
+    		<label class="w3-label">Filter By</label>
+    		<select class="w3-select" style="margin-top: 9px;" name="searchFilter" id="searchFilter" ><option>None</option></select>
+    	</div>
+    </div>
+    <div class="w3-quarter">
+    	<div class="w3-group" >
+    		<label class="w3-label">Search Term</label>
+    		<input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="a variable name"> 			
+    	</div>
+    </div>
+  </div>
+  <div class="w3-container" name="traceTable" id="traceTable">
+    No results.
+  </div>
+  
 </template>
