--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -66,7 +66,7 @@
               </div>
             </div>
           </div>
-          <div id="right-splitter-bottom">
+          <div id="right-splitter-bottom"  class= "flow" >
             <console-window console.bind='consoleWindow'></console-window>
             <chat chat.bind="chat"></chat>
           </div>
