gutter example and onJsEditorChanged optimization

--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
 	
 		<!-- Firepad -->
 		<script src="https://cdn.firebase.com/libs/firepad/1.2.0/firepad.js"></script>
+		
+		<!-- MD5 Hash Algo -->
+		<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
+
 	</body>
 </html>
