added number of search results and fixed 'item.value' by removing the extra 's' at the end. Also removed .ToArray() for the query result

--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -15,7 +15,8 @@
     	</div>
     </div>
   </div>
-  <div class="w3-container" name="traceTable" id="traceTable">
+  <div class="w3-table" id="numResultCount">Number of Search Results: 0</div>
+  <div class="w3-table" name="traceTable" id="traceTable">
     No results.
   </div>
   
