--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<script src="https://cdn.firebase.com/libs/firepad/1.2.0/firepad.js"></script>
 
 	<!-- MD5 Hash Algo -->
-	<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
+	<!--<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>-->
 
          
 
