Abdulaziz fix for overflow contents

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -49,7 +49,7 @@
       </div>
       <div id="main-splitter-right">
         <div id="rightSplitter" class="col-md-5" style="padding-left: 2px; padding-right: 2px">
-          <div id="right-splitter-top">
+          <div id="right-splitter-top" class = "flow">
             <div role="tabpanel">
               <ul class="nav nav-tabs">
                 <li role="presentation" class="active">
