--- a/src/htmlEditor/html-editor.html
+++ b/src/htmlEditor/html-editor.html
@@ -1,4 +1,11 @@
 <template bindable="htmlEditor">
-	<div id="aceHtmlEditorDiv" style="height: 700px"></div>
+    <div class = "row" style = "width:500px;"><div class = "col-md-offset-1">
+	<input name="slider" id="slider" type="range" min="1" max="50" value="0" step="1" onchange="shValue(this.value)" /> 
+    <span id="range">1</span></div>
+    
+	<button type="button" name = "mybutton" id="editbutton" click.delegate="clickedit()" style = "float:right; height:20px ; width:40px" disabled >Edit</button>
+	</div>
+	<div id="aceHtmlEditorDiv" style="height: 700px; display:block"></div>
+	<div id="aceHtmlhisEditorDiv" style="height: 700px; display:none"></div>
 	 
 </template>
