--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 	</script>
 
 	<!-- Firebase -->
-	<script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+	<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 
 	<!-- ACE and its JavaScript mode and theme files -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
-
+	<script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"></script>
 	<!-- Firepad -->
-	<script src="https://cdn.firebase.com/libs/firepad/1.2.0/firepad.js"></script>
+	<script src="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.js"></script>
 
 
          
