--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -5,19 +5,13 @@
   <label for="checkbox2">Activate Visualization</label>
   </br>
   <div show.bind="vis.isChecked" class="add-vis">
+    <select id="visSelect${$index}" class="btn btn-default" change.trigger="vis.onSelectChange($event, $index)">
+      <option repeat.for="type of vis.visualizationTypes" value.bind="type.value">${type.name}</option>
+    </select>
     <button type="button" class="btn btn-default" click.trigger="vis.addVisualization()">Add Visualization</button>
   </div>
   <br/>
   <div class="vis-container" repeat.for="visualization of vis.visualizations">
-    <div show.bind="vis.isChecked" class="vis-dropdown dropdown open">
-      <select class="btn btn-default" value.bind="visTypeSelected">
-        <option repeat.for="type of vis.visualizationTypes" value.bind="type.value">${type.name}</option>
-      </select>
-    </div>
-    <visualization vis.bind="visualization">
-      <div show.bind="visTypeSelected === 'DataTable'">
-        blah
-      </div>
-    </visualization>
+    <visualization vis.bind="visualization"></visualization>
   </div>
 </template>
