--- a/src/historyViewer/history-viewer.html
+++ b/src/historyViewer/history-viewer.html
@@ -2,7 +2,7 @@
     <div class = "row" style = "width:500px;"><div class = "col-md-offset-1">
     	<input name="slider" id="historySlider" type="range" min="1" max="50" value="1" step="1" /> 
         <span id="range">1</span></div>
-    	<button type="button" name = "mybutton" id="editbutton" click.delegate="clickedit()" style = "float:right; height:20px ; width:40px" disabled >Edit</button>
+    	<button type="button" name = "mybutton" id="editbutton"  style = "float:right; height:20px ; width:40px" disabled >Edit</button>
 	</div>
 	<div id="aceHtmlHistoryEditorDiv" style="height: 700px; display:none"></div>
 </template>
