--- a/src/searchTab/trace-search.html
+++ b/src/searchTab/trace-search.html
@@ -11,11 +11,12 @@
     <div class="w3-quarter">
     	<div class="w3-group" >
     		<label class="w3-label">Search Term</label>
-    		<input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="a variable name"> 			
+    		<input class="w3-input" type="text" name="searchTerm" id="searchTerm" placeholder="a variable name" list = "filteredOptions"> 		
+    		<datalist id="filteredOptions"></datalist>
     	</div>
     </div>
   </div>
-  <div class="w3-table" id="numResultCount">Number of Search Results: 0</div>
+  <div class="w3-table" id="resultCount">Number of Search Results: 0</div>
   <div class="w3-table" name="traceTable" id="traceTable">
     No results.
   </div>
